Add support for integer weight compilation (faster for integer weight graphs)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "*.embeddedhtml": "html",
         "xstring": "cpp",
         "iostream": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "utility": "cpp",
+        "vector": "cpp"
     }
 }
